Fixed rendering of error message so it doesn't jump.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,5 +30,5 @@ body {
    background-color: white;
    margin: 0 auto;
    padding-top: 100px;
-   height: 1000px;
+   height: 100%;
  }
